--- a/dashboard_pkg/frontend/index.html
+++ b/dashboard_pkg/frontend/index.html
@@ -32,7 +32,7 @@
       </section>
     </main>
     <footer>
-      Dashboard powered by FastAPI · YOLOv8 · Arduino Nano R4 · Updated <span id="heartbeat">never</span>
+      Dashboard powered by FastAPI · YOLOv8 · Arduino UNO R4 WiFi · Updated <span id="heartbeat">never</span>
     </footer>
     <script type="module" src="/static/app.js"></script>
   </body>
